# kccadmin

./: CMakeLists.txt  README.md
include/: gui.h  raider.h
src/: gui.cpp  main.cpp  raider.cpp
